ajout lien rawgraph

--- a/phylogene_app/templates/links.html
+++ b/phylogene_app/templates/links.html
@@ -74,6 +74,8 @@
         - iTOL : <a href="https://itol.embl.de" target="_blank">https://itol.embl.de</a>
             <br>
         - Scikit-learn : <a href="https://scikit-learn.org/stable/" target="_blank">https://scikit-learn.org/stable/</a>
+            <br>
+        - RAWGraphs : <a href="https://www.rawgraphs.io/" target="_blank">https://www.rawgraphs.io/</a>
         </p>
     </div>
 </div>
