add instructions to create newick file

--- a/phylogene_app/templates/neighbor_joining.html
+++ b/phylogene_app/templates/neighbor_joining.html
@@ -42,6 +42,8 @@
                     <label for="message">Newick Format :</label>
                     <div class="full-width">
                         <textarea id="message" rows="5" cols="150"></textarea>
+                    Copy/Paste the text in notepad then name your file with ".tree" as extension.
+                    You can use this file in Itol.
                     </div>
 
                     <script>
