--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -215,9 +215,9 @@
                                 Unsupervized Learning
                                 </button>
                                 <div class="dropdown-menu">
-                                    <input id="submit19" name="h_clust" type="submit" value="H_Clust" onclick="this.form.submited=this.value;" >
-                                    <input id="submit20" name="k_means" type="submit" value="K_Means" onclick="this.form.submited=this.value;" >
-                                    <input id="submit21" name="clustermap" type="submit" value="Clustermap" onclick="this.form.submited=this.value;" >
+                                    <input id="submit19" name="h_clust" type="submit" value="h_clust" onclick="this.form.submited=this.value;" >
+                                    <input id="submit20" name="k_means" type="submit" value="k_means" onclick="this.form.submited=this.value;" >
+                                    <input id="submit21" name="clustermap" type="submit" value="clustermap" onclick="this.form.submited=this.value;" >
                                 </div>
                             </div>
                         </div>
