réagencement de phylEntropy

--- a/phylogene_app/templates/graph/kruskal.html
+++ b/phylogene_app/templates/graph/kruskal.html
@@ -4,7 +4,7 @@
 <head>
   {% block head %}
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+  <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
   <title>Minimun Spanning Tree</title>
   {% endblock %}
 </head> 
@@ -16,7 +16,7 @@
 
   <!-- <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" /> -->
   <!-- <link href="https://unpkg.com/browse/vis-network@9.1.1/styles/vis-network.min.css" rel="stylesheet" type="text/css" /> -->
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 
 
 <div class="container-fluid" style="background-color: #a6aaa9;" >
