--- a/phylogene_app/templates/metrics/Entropy.html
+++ b/phylogene_app/templates/metrics/Entropy.html
@@ -4,9 +4,9 @@
 <head>
 	{% block head %}
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+<link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
 <title>Enthropie</title>
-<link rel="stylesheet" href="../static/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 <link rel="stylesheet" href="../static/css/phylotree.css">
 {% endblock %}
 <style>
