--- a/phylogene_app/templates/phylEntropy/base.html
+++ b/phylogene_app/templates/phylEntropy/base.html
@@ -9,12 +9,12 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+  <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.css">
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 {% comment %}
   <link rel="stylesheet" href="../static/css/phylotree.css">
 {% endcomment %}
@@ -58,7 +58,6 @@
                     <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
                 </li>
               </ul>
-
             </div>
         </nav>
 
@@ -72,7 +71,7 @@
             <div>
               </br>
               </br>
-              <img src="../static/img/LogoSample_ByTailorBrands.jpg" class="rounded" height="150" width="150"/>
+              <img src="../../static/img/LogoSample_ByTailorBrands.jpg" class="rounded" height="150" width="150"/>
             </div>
           </div>
         </div>
