--- a/phylogene_app/templates/maps/chartcity.html
+++ b/phylogene_app/templates/maps/chartcity.html
@@ -3,8 +3,8 @@
 <head>
   {% block head %}
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
-  <title>Global Map</title>
+  <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
+  <title>Global City Map</title>
   {% endblock %}
 </head> 
 
@@ -25,24 +25,31 @@
         callback: function () {
           var data=[];
           var numberstrainpertype = {};
-          var country = [] ;
-          var countryvalue = [] ;
-          var Header= ['Country', 'Number'];
+          var city = [] ;
+          var cityvalue = [] ;
+          //var area = ["181.76", "15151", "42.0", "874.8", "117.27", "130.17", "158.9", "243.60", "140.7", "102.41", "213.44", "43.43", "11", "987"] ;
+          var Header= ['City', 'Population'];
           data.push(Header);
           damien.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
 
-          country = Object.keys(numberstrainpertype);
-          countryvalue = Object.values(numberstrainpertype);
+          city = Object.keys(numberstrainpertype);
+          cityvalue = Object.values(numberstrainpertype);
+          console.log(city);
+          console.log(cityvalue);
+          //console.log(area[1]);
 
           for (var i = 0; i < damienitem; i++) {
             var temp=[];
-            temp.push(country[i]);
-            temp.push(countryvalue[i]);
+            temp.push(city[i]);
+            temp.push(cityvalue[i]);
+            //temp.push(area[i]);
             data.push(temp);
           }     
            
           var options = {
-                      
+            //region: 'FR',
+            displayMode: 'markers',
+            colorAxis: {colors: ['green', 'blue']}                    
            };
 
           var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
@@ -58,7 +65,7 @@
     {% endblock%}
   </head>
   <body>
-    <h1 style="text-align: center;" >Global Map</h1>
+    <h1 style="text-align: center;" >Global City Map</h1>
     <div id="regions_div" style="width: 900px; height: 500px; margin: 0 auto;"></div>
   </body>
 </html>
