--- a/phylogene_app/templates/metrics/Shannon-Entropy.html
+++ b/phylogene_app/templates/metrics/Shannon-Entropy.html
@@ -3,7 +3,7 @@
 <head>
   {% block head %}
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+  <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
   <title>Shannon-Entropy</title>
   {% endblock %}
 </head>
@@ -17,7 +17,7 @@
 <script src="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"></script>
 <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 <link href="https://unpkg.com/browse/vis-network@9.1.0/styles/vis-network.min.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="../static/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 
 <style>
