--- a/phylogene_app/templates/phylEntropy/about.html
+++ b/phylogene_app/templates/phylEntropy/about.html
@@ -3,11 +3,11 @@
 <head>
     {% block head %}
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+    <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 
     {% endblock %}
     <meta charset="UTF-8">
@@ -126,11 +126,11 @@
           <td width="50%">
             <div><em>This site uses </em>&nbsp;
               <a href="https://www.djangoproject.com/" target="_blank">
-                <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
+                <img src="../../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
               <a href="https://getbootstrap.com/" target="_blank">
-                <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                <img src="../../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
               <a href="https://www.python.org/" target="_blank">
-                <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                <img src="../../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
             </div>
           </td>
         </tr>
