--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -4,11 +4,11 @@
     <head>
         {% block head %}
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-        <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+        <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 {% comment %}
         <link rel="stylesheet" href="../static/css/phylotree.css">
 {% endcomment %}
@@ -63,6 +63,30 @@
                     <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
                 </li>
               </ul>
+
+                <div class='row g-0'>
+                  <div class='col-md-5 w-auto ms-auto'>
+                      {% if user.is_authenticated %}
+                          <div class="navbar-nav">
+                            Welcome <strong>{{ user.username }}</strong>
+                                <a class="nav-item nav-link" href="{% url 'logout' %}">
+                                    <i class="fa fa-log-in"></i> Log out
+                                </a>
+                            </div>
+                      {% else %}
+                          {% comment %}<button class="btn btn-link my-2 my-sm-0" type="submit">Sign in</button>
+                          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Sign up</button>{% endcomment %}
+                            <div class="navbar-nav">
+                                <a class="nav-item nav-link" href="{% url 'login' %}">
+                                    <i class="fa fa-sign-in"></i> Log in
+                                </a>
+                                <a class="nav-item nav-link" href="{% url 'register' %}">
+                                    <i class="fa fa-user-plus"></i> Sign up
+                                </a>
+                            </div>
+                      {% endif %}
+                  </div>
+                </div>
             </div>
         </nav>
 
@@ -131,11 +155,11 @@
                       <td width="50%">
                         <div><em>This site uses </em>&nbsp;
                           <a href="https://www.djangoproject.com/" target="_blank">
-                            <img src="../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
+                            <img src="../../static/img/djangologo.png" alt="django" width="68" height="35" border="0"> </a>&nbsp;
                           <a href="https://getbootstrap.com/" target="_blank">
-                            <img src="../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                            <img src="../../static/img/bootstraplogo.png" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
                           <a href="https://www.python.org/" target="_blank">
-                            <img src="../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
+                            <img src="../../static/img/pythonlogo.jpg" alt="bootstrap" width="68" height="35" border="0"> </a>&nbsp;
                         </div>
                       </td>
                     </tr>
