--- a/phylogene_app/templates/phylEntropy/links.html
+++ b/phylogene_app/templates/phylEntropy/links.html
@@ -3,15 +3,15 @@
 <head>
     {% block head %}
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+    <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
 
     {% endblock %}
     <meta charset="UTF-8">
-    <title>Credits</title>
+    <title>Links</title>
 
     <style>
         h1 {
@@ -42,29 +42,43 @@
             <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="{% url 'links' %}"><i class='fa fa-paperclip'></i> Links</a>
         </li>
 
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'credits' %}"><i class="fa fa-book"></i> Credits</a>
         </li>
       </ul>
     </div>
 </nav>
 
-<div class="container" id="creditscontainer" style="background-color: #ffffff;">
+<div class="container" id="linkscontainer" style="background-color: #ffffff;">
+    <a href="http://www.pasteur-guadeloupe.fr/karubionet.html" target="_blank" col></a>
+<!--DEBUT TABULATIONS -->
     <div class="col-lg-12" style="padding-top: 70px;">
-        <h1 >Credits</h1>
-        <br/>
-        <div id="info">
-                    <p><b>Supervisor &amp; Web Content Manager:</b> <a href="mailto:dcouvin@pasteur-guadeloupe.fr">David COUVIN</a></p>
-                    <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCCO</a> </p>
-        </div><br/>
+        <p>
+            <h1 >Links</h1>
+        - NGphylogeny : <a href="https://ngphylogeny.fr/" target="_blank">https://ngphylogeny.fr/</a>
+            <br>
+        - cripscasfinder : <a href="https://crisprcas.i2bc.paris-saclay.fr/" target="_blank">https://crisprcas.i2bc.paris-saclay.fr/</a>
+            <br>
+        - GrapeTree : <a href="https://github.com/achtman-lab/GrapeTree" target="_blank">https://github.com/achtman-lab/GrapeTree</a>
+            <br>
+        - vis.js : <a href="https://visjs.org/" target="_blank">https://visjs.org/</a>
+            <br>
+        - Graphviz : <a href="https://graphviz.org/" target="_blank">https://graphviz.org/</a>
+            <br>
+        - NGPhylogeny.fr : <a href="https://ngphylogeny.fr/" target="_blank">https://ngphylogeny.fr/</a>
+            <br>
+        - iTOL : <a href="https://itol.embl.de" target="_blank">https://itol.embl.de</a>
+            <br>
+        - Scikit-learn : <a href="https://scikit-learn.org/stable/" target="_blank">https://scikit-learn.org/stable/</a>
+            <br>
+        - RAWGraphs : <a href="https://www.rawgraphs.io/" target="_blank">https://www.rawgraphs.io/</a>
+        </p>
     </div>
 </div>
-
-
 
 
 </body>
