--- a/phylogene_app/templates/users/login.html
+++ b/phylogene_app/templates/users/login.html
@@ -19,7 +19,7 @@
                 Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
             </small><br>
             <small class="text-muted">
-                <a href="/">Forgot password?</a>
+                <a href="/">Home</a>
             </small>
         </div>
     </div>
