--- a/phylogene_app/templates/users/logout.html
+++ b/phylogene_app/templates/users/logout.html
@@ -7,5 +7,8 @@
         <small class="text-muted">
             <a href="{% url 'login' %}">Log In Again</a>
         </small>
+        <small class="text-muted">
+            <a href="/">Home</a>
+        </small>
     </div>
 {% endblock content %}
